add perspective and report

--- a/src/index.html
+++ b/src/index.html
@@ -9,14 +9,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="text/javascript">report_url="/assets/"</script>
+  <script type="text/javascript">report_url="/assets/";report_handle=""</script>
   <style>
     @keyframes spin {
       0%   {transform: rotate(0deg);}
 
       100% {transform: rotate(360deg);}
     }
-    .text {
+    .text_load {
       margin: 50px auto;
       z-index:10;
       text-align:center;    
@@ -33,7 +33,7 @@
   </style>
 </head>
 <body class="mat-typography">
-  <div id="loading_mask"> <div class="loader"></div><h1 class="text">Loading</h1></div>
+  <div id="loading_mask"> <div class="loader"></div><h1 class="text_load">Loading</h1></div>
   <app-root></app-root>
 </body>
 </html>
