add perspective, url hash support

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="text/javascript">report_url="/assets/";report_handle=""</script>
+  <script type="text/javascript">report_url="/assets/";report_handle="";jira_url="https://jira.cd.sac.int.threatmetrix.com/browse/"</script>
   <style>
     @keyframes spin {
       0%   {transform: rotate(0deg);}
